src/test/ui/feature-gates/feature-gate-self-in-typedefs.stderr
error[E0411]: cannot find type `Self` in this scope
  --> $DIR/feature-gate-self-in-typedefs.rs:13:17
   |
LL |     Cons(T, &'a Self)
   |                 ^^^^ `Self` is only available in traits and impls

error: aborting due to previous error

For more information about this error, try `rustc --explain E0411`.
